# AntiSpamBOT

./: .gitignore  DEPLOY.md  README.md  config.example.toml  main.py  pyproject.toml  setup.py
jurybot/: __init__.py  app.py  config.py  models.py  storage.py
jurybot/services/: admin.py  case.py
tests/: test_case_service.py
